tests/errors/lex_char4.java
public class lex_char4 {
	public static void main(String[] args) {
		char c = ';
	}
}
